Tasks, Modules and Devices

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,15 @@
 
 set(app_sources
 	"common/common.cpp"
+	"devices/AllDevices.cpp"
 	"devices/Device.cpp"
 	"devices/K210/K210.cpp"
 	"main.cpp"
+	"modules/AllModules.cpp"
+	"modules/k210_esp32_com/K210ESP32Communication.cpp"
 	"modules/Module.cpp"
 	"modules/wifi/WifiModule.cpp"
+	"tasks/tasks.cpp"
 )
 
 idf_component_register(SRCS ${app_sources})
